@@ -28,10 +28,6 @@ class Smarty_Internal_Compile_Foreach extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        $this->_open_tag('foreach', array('foreach', $this->compiler->nocache)); 
-        // maybe nocache because of nocache variables
-        $this->compiler->nocache = $this->compiler->nocache | $this->compiler->tag_nocache;
-
         $from = $_attr['from'];
         $item = $_attr['item'];
 
@@ -40,6 +36,10 @@ class Smarty_Internal_Compile_Foreach extends Smarty_Internal_CompileBase {
         } else {
             $key = null;
         } 
+
+        $this->_open_tag('foreach', array('foreach', $this->compiler->nocache, $item, $key)); 
+        // maybe nocache because of nocache variables
+        $this->compiler->nocache = $this->compiler->nocache | $this->compiler->tag_nocache;
 
         if (isset($_attr['name'])) {
             $name = $_attr['name'];
@@ -153,8 +153,8 @@ class Smarty_Internal_Compile_Foreachelse extends Smarty_Internal_CompileBase {
         // check and get attributes
         $_attr = $this->_get_attributes($args);
 
-        list($_open_tag, $nocache) = $this->_close_tag(array('foreach'));
-        $this->_open_tag('foreachelse', array('foreachelse', $nocache));
+        list($_open_tag, $nocache, $item, $key) = $this->_close_tag(array('foreach'));
+        $this->_open_tag('foreachelse', array('foreachelse', $nocache, $item, $key));
 
         return "<?php }} else { ?>";
     } 
@@ -181,7 +181,11 @@ class Smarty_Internal_Compile_Foreachclose extends Smarty_Internal_CompileBase {
             $this->compiler->tag_nocache = true;
         } 
 
-        list($_open_tag, $this->compiler->nocache) = $this->_close_tag(array('foreach', 'foreachelse'));
+        list($_open_tag, $this->compiler->nocache, $item, $key) = $this->_close_tag(array('foreach', 'foreachelse'));
+        unset($compiler->local_var[$item]);
+        if ($key != null) {
+            unset($compiler->local_var[$key]);
+        } 
 
         if ($_open_tag == 'foreachelse')
             return "<?php } ?>";
