@@ -1,3 +1,6 @@
+10/05/2010
+- bugfix on {foreach} and {for} optimizations of 27/04/2010 
+
 09/05/2010
 - update of template and config file parser because of minor parser generator bugs 
 
